<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingVertical="30dp"
    android:paddingHorizontal="20dp"
    android:gravity="center_horizontal"
    tools:context=".BookActivity">

    <TextView
        android:id="@+id/tv_detailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_detailAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_detailTitle"
        android:gravity="center"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tv_detailGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_detailAuthor"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_detailSynopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_detailGenre"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:textSize="18sp"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_below="@id/tv_detailSynopsis"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_edit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:backgroundTint="@color/secondary"
            android:textColor="@color/complementary"
            android:text="@string/btn_edit"
            android:layout_margin="16dp" />

        <Button
            android:id="@+id/btn_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/secondary"
            android:textColor="@color/complementary"
            android:text="@string/btn_delete"
            android:layout_margin="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"/>

        <EditText
            android:id="@+id/et_editAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author"/>

        <EditText
            android:id="@+id/et_editGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/genre"/>

        <EditText
            android:id="@+id/et_editSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/synopsis"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                android:textColor="@color/complementary"
                android:text="@string/btn_save"/>
            <Button
                android:id="@+id/btn_discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                android:textColor="@color/complementary"
                android:text="@string/btn_discard"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>