<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingVertical="30dp"
    android:paddingHorizontal="20dp"
    android:gravity="center_horizontal"
    tools:context=".MyBooksActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="start"
        android:background="@android:color/transparent"
        />

    <TextView
        android:id="@+id/tv_books"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/booksTitle"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_books"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addBook"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:src="@drawable/add"
        app:tint="@color/white"
        android:contentDescription="@string/add_book"
        android:backgroundTint="@color/complementary"
        />

</LinearLayout>